syntax="proto3";
option go_package="./proto/collection";

package collection;

service Collection{
  rpc CollectionList (ListRequest) returns (ListsResponse);
  rpc CollectionAdd (AddRequest) returns(MsgResponse);
  rpc CollectionDel (DelRequest) returns(MsgResponse);
}

message DelRequest{
  int32 id=1;
}

message MsgResponse{
  int32 code=1;
  string msg=2;
}

message AddRequest{
  string email=1;
  int32 pid=2;
}

message ListRequest{
   string email=1;
   int32 currentPage=2;
   int32 pageSize=3;
}

message List{
  int32 id=1;
  int32 pid=2;
  string name=3;
  float price=4;
  string unit=5;
  string pic=6;
  string desc=7;
  string addTime=8;
}

message ListsResponse{
  int32 code=1;
  string msg=2;
  int32 count=3;
  repeated List lists=4;
}